--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,61 +27,12 @@
         app:layout_constraintRight_toRightOf="parent" />
 
     <Button
-        android:id="@+id/btnGoogleMap"
+        android:id="@+id/btnNaviPopup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="GoogleMap"
+        android:text="showPopup"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/txtGeo"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <Button
-        android:id="@+id/btnDaumMap"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="DaumMap(Kakao)"
-        android:layout_marginTop="9dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnGoogleMap"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.501" />
-
-    <Button
-        android:id="@+id/btnNaverMap"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="NaverMap"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnDaumMap"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <Button
-        android:id="@+id/btnKakaoNeviMap"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="KakaoNevi"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnNaverMap"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <Button
-        android:id="@+id/btnTMap"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TMap"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnKakaoNeviMap"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
